--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Portal de la Universidad de Navojoa</title>
@@ -29,11 +29,11 @@
       <nav>
         <ul>
 <li><a href="index.html">Inicio</a></li>
-<li><a href="https://apps.unav.edu.mx/academico/" target="_blank" rel="nofollow">Acad&eacute;mico</a></li>
-<li><a href="https://apps.unav.edu.mx/financiero/login.jsp" target="_blank" rel="nofollow">      Financiero</a></li>
+<li><a href="https://apps.unav.edu.mx/academico/"target="_blank" rel="nofollow">Acad&eacute;mico</a></li>
+<li><a href="https://apps.unav.edu.mx/financiero/login.jsp"target="_blank" rel="nofollow">      Financiero</a></li>
 <li><a href="http://www.flickr.com/photos/unavojoa/" target="_blank" rel="nofollow">Galer&iacute;a     </a></li>
-<li><a href="http://www.unav2.edu.mx/index.php/vida-unav/iglesiaunav.html" target="_blank"       rel="nofollow">Iglesia</a></li>
-<li><a href="http://mail.unav.edu.mx" target="_blank" rel="nofollow"class="current">Mail</a></li>
+<li><a href="http://biblioteca.unav.edu.mx/"target="_blank" rel="nofollow">Biblioteca</a></li>
+<li><a href="http://mail.unav.edu.mx"target="_blank" rel="nofollow"class="current">Mail</a></li>
         </ul>
       </nav>
     </div>
@@ -42,11 +42,11 @@
   <section id="gallery">
   	<div class="container">
       <ul id="myRoundabout">
-      	<li><a href= "Foro.pdf" target="_blank" rel="nofollow"><img src="images/slide2.jpg" alt=""></a></li>
-        <li><a href= "Conv_conacyt.pdf" target="_blank" rel="nofollow"><img src="images/slide3.jpg" alt=""></a></li>
-        <li><img src="images/slide4.jpg" alt=""></li>
-        <li><img src="images/slide1.jpg" alt=""></li>
-        <li><a href= "http://iglesia.unav.edu.mx/" target="_blank" rel="nofollow"><img src="images/slide5.jpg" alt=""></a></li>
+      	<li><a href= "Foro.pdf" rel="nofollow"><img src="images/slide2.jpg" alt=""></a></li>
+        <li><a href= "Conv_conacyt.pdf" rel="nofollow"><img src="images/slide3.jpg" alt=""></a></li>
+        <li><a href="https://www.flickr.com/photos/unavojoa/" rel="nofollow"><img src="images/slide4.jpg" alt=""></li>
+        <li><a href="https://apps.unav.edu.mx/academico/" rel="nofollow"><img src="images/slide1.jpg" alt=""></li>
+        <li><a href="http://biblioteca.unav.edu.mx/" rel="nofollow"><img src="images/slide5.jpg" alt=""></a></li>
         
       </ul>
   	</div>
@@ -74,13 +74,13 @@
               </li>
               <li>
               	<figure><strong>5</strong>ABRIL</figure>
-                <h3></a>Ayuno y oraci&oacute;n</h3>
-                </a>
+                <h3></a>Ayuno y oraci&oacute;n</a></h3>
+                Dios permita que podamos pasar un momento especial con Dios. 
               </li>
               <li>
               	<figure><strong>11</strong>ABRIL</figure>
                 <h3>Instituto de colportores</a></h3>
-               Otro año esta por terminar y muy pronto a colportar iras, asi que te debes preparar y asi no fracasaras. Dios les bendiga</a>
+               Otro a&ntildeo esta por terminar y muy pronto a colportar iras, asi que te debes preparar y asi no fracasaras. Dios les bendiga</a>
               </li>
               <li>
               	<figure><strong>27</strong>ABRIL</figure>
